--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 PORT = 8000
 MONGOOSE_URI = mongodb+srv://tiwarikishan297:Hellgate%40297@porusserver.fvfst.mongodb.net/myDatabase?retryWrites=true&w=majority
+CORS_ORIGIN = *
+
+
 
  # mongodb+srv://tiwarikishan297:Hellgate%40297@porusserver.fvfst.mongodb.net  
